Feat: Add endpoint <get animals for one  province>
